{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 245,
  "lineage": "bc9db04a-ca5c-dd7a-0394-d6aff9ffc4b6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "flightanalysis",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:038462789002:internet-gateway/igw-075af36552e6738c0",
            "id": "igw-075af36552e6738c0",
            "owner_id": "038462789002",
            "tags": {
              "Name": "flightanalysis-igw"
            },
            "tags_all": {
              "Name": "flightanalysis-igw"
            },
            "vpc_id": "vpc-02e5ee8287d9a29a0"
          },
          "dependencies": [
            "aws_vpc.flightanalysis"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "flightanalysis",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:038462789002:route-table/rtb-059b3709ea1422d95",
            "id": "rtb-059b3709ea1422d95",
            "owner_id": "038462789002",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-075af36552e6738c0",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "flightanalysis-route-table"
            },
            "tags_all": {
              "Name": "flightanalysis-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-02e5ee8287d9a29a0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.flightanalysis",
            "aws_vpc.flightanalysis"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "flightanalysis",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dc7f27c730ba18d7",
            "route_table_id": "rtb-059b3709ea1422d95",
            "subnet_id": "subnet-0cc3ac5b1d80fb3a2"
          },
          "dependencies": [
            "aws_internet_gateway.flightanalysis",
            "aws_route_table.flightanalysis",
            "aws_subnet.flightanalysis",
            "aws_vpc.flightanalysis"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "flightanalysis_redshift_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:038462789002:security-group/sg-09f0c3cf0adebdaa7",
            "description": "Allow public access to Redshift cluster",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09f0c3cf0adebdaa7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5439,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5439
              }
            ],
            "name": "flightanalysis-redshift-sg",
            "name_prefix": "",
            "owner_id": "038462789002",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "flightanalysis-redshift-sg"
            },
            "tags_all": {
              "Name": "flightanalysis-redshift-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-02e5ee8287d9a29a0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.flightanalysis"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "flightanalysis",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:038462789002:subnet/subnet-0cc3ac5b1d80fb3a2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cc3ac5b1d80fb3a2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "038462789002",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "flightanalysis-subnet"
            },
            "tags_all": {
              "Name": "flightanalysis-subnet"
            },
            "vpc_id": "vpc-02e5ee8287d9a29a0"
          },
          "dependencies": [
            "aws_vpc.flightanalysis"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "flightanalysis",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:038462789002:vpc/vpc-02e5ee8287d9a29a0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0784979fcdf9163e7",
            "default_route_table_id": "rtb-06862019d8584e507",
            "default_security_group_id": "sg-0ae262be7d805ccee",
            "dhcp_options_id": "dopt-08357de9734137cc8",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02e5ee8287d9a29a0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06862019d8584e507",
            "owner_id": "038462789002",
            "tags": {
              "Name": "flightanalysis-vpc"
            },
            "tags_all": {
              "Name": "flightanalysis-vpc"
            }
          }
        }
      ]
    }
  ]
}